# snake-game

./: README.md  main.py  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
.github/workflow/: tests.yml
.github/workflows/: tests.yml
resources/: err.py  snake.py
src/assets/: food.py  map.py  math_utils.py  snake.py
src/game/: game_event.py  gameloop.py
tests/: test_snake.py
