[metadata]
name = snake-game
description = Snake Game
author = Samuelson Pajeu
platform = any
classifiers =
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = 
    src

python_requires = >=3.10
package_dir =
    =.
zip_safe = False

[options.extras_require]
testing = 
    pytest>=7.4.3
    pytest-cov>=4.1.0
    tox>=4.11.4

[options.package_data]
snake-game = py.typed
